rename to compareBarcodes and document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(TENxSpatialParquet)
 export(TENxVisium)
 export(TENxVisiumHD)
 export(TENxVisiumList)
+export(compareBarcodes)
 exportClasses(TENxSpatialCSV)
 exportClasses(TENxSpatialList)
 exportClasses(TENxSpatialParquet)
