fix exportClass roxygen tag

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(TENxVisiumList)
 exportClasses(TENxSpatialCSV)
 exportClasses(TENxSpatialList)
 exportClasses(TENxVisium)
+exportClasses(TENxVisiumList)
 exportMethods(import)
 importClassesFrom(TENxIO,TENxFile)
 importFrom(BiocBaseUtils,isScalarCharacter)
