--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,22 @@
 
 export(TENxSpatialCSV)
 export(TENxSpatialList)
+export(TENxSpatialParquet)
 export(TENxVisium)
+export(TENxVisiumHD)
 export(TENxVisiumList)
 exportClasses(TENxSpatialCSV)
 exportClasses(TENxSpatialList)
+exportClasses(TENxSpatialParquet)
 exportClasses(TENxVisium)
+exportClasses(TENxVisiumHD)
 exportClasses(TENxVisiumList)
 exportMethods(import)
 importClassesFrom(TENxIO,TENxFile)
 importFrom(BiocBaseUtils,isScalarCharacter)
 importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,path)
+importFrom(BiocIO,FileForFormat)
 importFrom(BiocIO,decompress)
 importFrom(BiocIO,import)
 importFrom(S4Vectors,DataFrame)
