--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ exportClasses(TENxVisiumHD)
 exportClasses(TENxVisiumList)
 exportMethods(import)
 importClassesFrom(TENxIO,TENxFile)
+importFrom(BiocBaseUtils,checkInstalled)
 importFrom(BiocBaseUtils,isScalarCharacter)
 importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,path)
