update TENxSpatialList constructor for TENxFileList resources inputs
- add aligned_fiducials

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,5 +29,6 @@ importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(TENxIO,TENxFile)
 importFrom(TENxIO,TENxFileList)
+importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,new)
