--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,12 +23,16 @@ importFrom(BiocIO,decompress)
 importFrom(BiocIO,import)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
+importFrom(SingleCellExperiment,altExps)
+importFrom(SingleCellExperiment,mainExpName)
 importFrom(SpatialExperiment,SpatialExperiment)
+importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(TENxIO,TENxFile)
 importFrom(TENxIO,TENxFileList)
+importFrom(TENxIO,TENxH5)
 importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,new)
